# image_microservice

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_client.py
app/: main.py
