[project]
name = "image-microservice"
version = "0.1.0"
description = "A microservice for uploading and downloading images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.4",
    "pillow>=11.0.0",
    "python-multipart>=0.0.17",
    "sqlmodel>=0.0.22",
]
